clusters/talos-cluster/clio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clio
  namespace: clio
spec:
  selector:
    app: clio
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
