clusters/talos-cluster/clio/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: clio-route
  namespace: clio
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "clio.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: clio
          port: 80
